添加了搜索推荐列表，添加了结果搜索失败界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderActivity"></activity>
-        <activity android:name=".SearchActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"
-            ></activity>
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".SearchActivity" />
+        <!-- android:windowSoftInputMode="stateAlwaysVisible" -->
+        <activity android:name=".SearchresultActivity"></activity>
     </application>
 
 </manifest>
