--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
     buildTypes {
         release {
@@ -34,4 +35,5 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:1.0.6'
     compile 'com.github.Aspsine:SwipeToLoadLayout:v1.0.0'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
