--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,19 @@
         <activity android:name=".SearchActivity" />
         <!-- android:windowSoftInputMode="stateAlwaysVisible" -->
         <activity android:name=".SearchresultActivity" />
-        <activity android:name=".BespeakActivity"></activity>
+        <activity android:name=".BespeakActivity" />
         <activity android:name=".order.OrderActivity">
+
+        </activity>
+        <activity android:name=".order.NoMemberActivity" />
+        <activity android:name=".order.MemberActivity" />
+        <activity android:name=".window.SomeWindowActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".order.NoMemberActivity" />
-        <activity android:name=".order.MemberActivity"></activity>
     </application>
 
 </manifest>
